preview: 修复预览图bug

--- a/themes/gal/_config.yml
+++ b/themes/gal/_config.yml
@@ -53,6 +53,11 @@ default_preview:
   - preview3.jpg
   - preview4.jpg
   - preview5.jpg
+  - preview6.jpg
+  - preview7.jpg
+  - preview8.png
+  - preview9.png
+  - preview10.png
 
 # 侧边栏
 sidebar:
